# cdd_old

./: .gitignore  cdd.cabal
Test/: test0.cdd
src/: CddLexer.hs  CddParser.hs  CppGenerator.hs  CppHelper.hs  Helper.hs  Language.hs  Main.hs  StringTemplateHelper.hs  StringTemplateQQ.hs
src/Template/: ClientInterfaceCpp.hs  ClientProxyCpp.hs  CppCpp.hs  HeaderCpp.hs  MethodIdsHeader.hs  ServerCpp.hs  StructCpp.hs  StructCppHeader.hs
