name: cdd
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: "LICENSE"
data-dir: ""

executable cdd
    build-depends: base -any, text -any, shakespeare -any, parsec -any, mtl -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: CddLexer CppHelper Helper Language CddParser
                   Template.StructCpp, Template.HeaderCpp


