name: cdd
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: "LICENSE"
data-dir: ""

executable cdd
    build-depends:
      base <5,
      text >=1.2.1.0 && <2,
      shakespeare >=2.0.5 && <3,
      parsec >=3.1.9 && <4,
      mtl >=2.2.1 && <3,
      filepath -any,
      transformers >=0.4.3.0 && <1
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -rtsopts
    other-modules:
        CddLexer
        CppHelper
        Helper
        Language
        CddParser
        CppGenerator
        Template.CppCpp
        Template.StructCpp,
        Template.HeaderCpp,
        Template.ClientInterfaceCpp
        Template.ClientProxyCpp
        Template.MethodIdsHeader


